# libksysguard

./: .git-blame-ignore-revs  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5SysGuardConfig.cmake.in  KSysGuardConfig.cmake.in  config-ksysguard.h.cmake  libksysguard.categories  metainfo.yaml
autotests/: CMakeLists.txt  cgrouptest.cpp  cgrouptest.h  chronotest.cpp  chronotest.h  formattertest.cpp  graphicssignalplotterbenchmark.cpp  graphicssignalplotterbenchmark.h  guitest.cpp  guitest.h  ksysguarddtest.cpp  ksysguarddtest.h  processdatamodeltest.cpp  processtest.cpp  processtest.h  sensordatamodeltest.cpp  sensorfacecontrollertest.cpp  sensortreemodeltest.cpp  signalplotterbenchmark.cpp  signalplotterbenchmark.h  signalplottertest.cpp  signalplottertest.h
autotests/processcore_linux/: CMakeLists.txt  procstatustest.cpp
faces/: CMakeLists.txt  Choices.qml  ConfigAppearance.qml  ConfigSensors.qml  FaceDetailsConfig.qml  FaceLoader.cpp  FaceLoader.h  SensorFace.cpp  SensorFaceController.cpp  SensorFaceController.h  SensorFaceController_p.h  SensorFace_p.h  UsedSensorsView.qml  resources.qrc  systemmonitor-faces.knsrc  systemmonitor-presets.knsrc
faces/facepackages/: CMakeLists.txt
faces/facepackages/barchart/: metadata.desktop  metadata.json
faces/facepackages/colorgrid/: metadata.desktop  metadata.json
faces/facepackages/facegrid/: metadata.desktop  metadata.json
faces/facepackages/horizontalbars/: metadata.desktop  metadata.json
faces/facepackages/linechart/: metadata.desktop  metadata.json
faces/facepackages/piechart/: metadata.desktop  metadata.json
faces/import/: CMakeLists.txt  Choices.qml  ColorSelector.qml  CompactSensorFace.qml  ExtendedLegend.qml  FacesPlugin.cpp  FacesPlugin.h  SensorFace.qml  SensorRangeSpinBox.qml  SuffixSpinBox.qml  qmldir
faces/packagestructure/: CMakeLists.txt  sensorface-packagestructure.json  sensorfacepackage.cpp
formatter/: CMakeLists.txt  Formatter.cpp  Formatter.h  FormatterWrapper.h  Unit.h
formatter/declarative/: CMakeLists.txt  FormatterPlugin.cpp  FormatterPlugin.h  FormatterWrapper.cpp  FormatterWrapper.h
ksgrd/: CMakeLists.txt  SensorAgent.cpp  SensorAgent.h  SensorClient.h  SensorManager.cpp  SensorManager.h  SensorShellAgent.cpp  SensorShellAgent.h  SensorSocketAgent.cpp  SensorSocketAgent.h
lsofui/: CMakeLists.txt  LsofSearchWidget.cpp  LsofSearchWidget.h  LsofSearchWidget.ui  Messages.sh  lsof.cpp  lsof.h
lsofui/designer/: CMakeLists.txt
processcore/: CMakeLists.txt  actions.actions  application.cpp  application.h  application_data_model.cpp  application_data_model.h  applications.cpp  applications.h  applications_data_model.cpp  applications_data_model.h  atop_p.h  cgroup.cpp  cgroup.h  cgroup_data_model.cpp  cgroup_data_model.h  enums.h  extended_process_list.cpp  extended_process_list.h  formatter.cpp  formatter.h  forwarding_attribute.cpp  forwarding_attribute.h  gpu_utils.cpp  gpu_utils.h  helper.cpp  helper.h  memoryinfo_p.h  process.cpp  process.h  process_attribute.cpp  process_attribute.h  process_attribute_model.cpp  process_attribute_model.h  process_controller.cpp  process_controller.h  process_data_model.cpp  process_data_model.h  process_data_provider.cpp  process_data_provider.h  process_foreign_types.h  (+24 more)
processcore/declarative/: CMakeLists.txt  ProcessEnums.h  ProcessPlugin.cpp  ProcessPlugin.h
processcore/identifytool/: CMakeLists.txt  main.cpp
processcore/linux_threaded/: GetNicenessTask.cpp  GetNicenessTask.h  ReadProcAttrTask.cpp  ReadProcAttrTask.h  ReadProcCGroupTask.cpp  ReadProcCGroupTask.h  ReadProcCmdlineTask.cpp  ReadProcCmdlineTask.h  ReadProcIoTask.cpp  ReadProcIoTask.h  ReadProcSmapsTask.cpp  ReadProcSmapsTask.h  ReadProcStatTask.cpp  ReadProcStatTask.h  ReadProcStatmTask.cpp  ReadProcStatmTask.h  ReadProcStatusTask.cpp  ReadProcStatusTask.h  Task.cpp  Task.h
processcore/plugins/: CMakeLists.txt
processui/: CMakeLists.txt  DisplayProcessDlg.cpp  DisplayProcessDlg.h  DisplayProcessUi.ui  KMonitorProcessIO.cpp  KMonitorProcessIO.h  KTextEditVT.cpp  KTextEditVT.h  Messages.sh  ProcessDataModel.cpp  ProcessDataModel.h  ProcessFilter.cc  ProcessFilter.cpp  ProcessFilter.h  ProcessModel.cc  ProcessModel.cpp  ProcessModel.h  ProcessModel_p.h  ProcessWidgetUI.ui  ReniceDlg.cc  ReniceDlg.cpp  ReniceDlg.h  ReniceDlgUi.ui  ksysguard.widgets  ksysguardprocesslist.cpp  ksysguardprocesslist.h  scripting.cpp  scripting.h  timeutil.h
processui/designer/: CMakeLists.txt
processui/processdetails/: MemoryMapsTab.cpp  OpenFilesTab.cpp  ProcessDetailsDialog.cpp
sensors/: CMakeLists.txt  ConfigSensors.qml  Sensor.cpp  Sensor.h  SensorDaemonInterface.cpp  SensorDaemonInterface_p.h  SensorDataModel.cpp  SensorDataModel.h  SensorFace.cpp  SensorFace.h  SensorFaceController.cpp  SensorFaceController.h  SensorFaceController_p.h  SensorFace_p.h  SensorGroup.cpp  SensorGroup_p.h  SensorInfo_p.h  SensorQuery.cpp  SensorQuery.h  SensorTreeModel.cpp  SensorTreeModel.h  SensorUnitModel.cpp  SensorUnitModel.h  org.kde.KSysGuardDaemon.xml  resources.qrc
sensors/declarative/: CMakeLists.txt  ExtendedLegend.qml  SensorFace.qml  SensorsPlugin.cpp  SensorsPlugin.h  qmldir
signalplotter/: CMakeLists.txt  kgraphicssignalplotter.cpp  kgraphicssignalplotter.h  ksignalplotter.cpp  ksignalplotter.h  ksignalplotter.widgets  ksignalplotter_p.h
systemstats/: AggregateSensor.cpp  AggregateSensor.h  CMakeLists.txt  DBusInterface.cpp  DBusInterface.h  SensorContainer.cpp  SensorContainer.h  SensorInfo.h  SensorObject.cpp  SensorObject.h  SensorPlugin.cpp  SensorPlugin.h  SensorProperty.cpp  SensorProperty.h  SensorsFeatureSensor.cpp  SensorsFeatureSensor.h  SysFsSensor.cpp  SysFsSensor.h  SysctlSensor.h  org.kde.ksystemstats.xml
tests/: CMakeLists.txt  chronotest.cpp  chronotest.h  graphicssignalplotterbenchmark.cpp  graphicssignalplotterbenchmark.h  guitest.cpp  guitest.h  ksysguarddtest.cpp  ksysguarddtest.h  processtest.cpp  processtest.h  signalplotterbenchmark.cpp  signalplotterbenchmark.h  signalplottertest.cpp
tests/formatter/: test_formatter.qml
tests/process/: test_process.qml
(+844 files in other folders)
